simplified nuget package name

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,6 @@ obj
 *.dll
 *.pdb
 /CrossProtectedTesting/bin/Debug/netcoreapp3.1
+/CrossProtectedData/bin/Release
+/CrossProtectedExample/bin/Release/netcoreapp3.1
+/CrossProtectedTesting/bin/Release/netcoreapp3.1
