[COMMIT] The proj files have been updated to enable SourceLink [CrossProtectedData.csproj]

--- a/CrossProtectedData/CrossProtectedData.csproj
+++ b/CrossProtectedData/CrossProtectedData.csproj
@@ -20,7 +20,15 @@
     <PackageTags>cryptography crypto protected-data DPAPI encryption</PackageTags>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
+    <IncludeSymbols>true</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
+  </ItemGroup>
+
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.DataProtection.Extensions" Version="3.1.0" />
