--- a/CrossProtectedData/CrossProtectedData.csproj
+++ b/CrossProtectedData/CrossProtectedData.csproj
@@ -5,7 +5,7 @@
     <AssemblyName>Integrative.CrossProtectedData</AssemblyName>
     <RootNamespace>Integrative.CrossProtectedData</RootNamespace>
     <PackageId>Integrative.CrossProtect</PackageId>
-    <Version>0.1.2</Version>
+    <Version>0.1.3</Version>
     <Authors>Integrative Software LLC</Authors>
     <Company>Integrative Software LLC</Company>
     <Product>CrossProtectedData</Product>
@@ -15,8 +15,7 @@
     <PackageIcon>Integrative.png</PackageIcon>
     <PackageIconUrl />
     <RepositoryUrl>https://github.com/integrativesoft/CrossProtectedData</RepositoryUrl>
-    <PackageReleaseNotes>- enable SourceLink
-- bumped packages</PackageReleaseNotes>
+    <PackageReleaseNotes>- allow null byte array parameter in AspNetWrapper</PackageReleaseNotes>
     <RepositoryType>git</RepositoryType>
     <PackageTags>cryptography crypto protected-data DPAPI encryption</PackageTags>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
